Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130361

QWebSocketServer ssl errors handling not on part with other classes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.11.0 FF
    • 6.8.0
    • WebSockets
    • None
    • All
    • 3d7635d1a (dev)

      The QWebSocketServer class provides the https://doc.qt.io/qt-6/qwebsocketserver.html#sslErrors signal. But differently to all it's friends (QWebSocket, QSslServer, QSslSocket), it is lacking:

       

      Right now, that block users from using self signed certificates (for example).

       

        For Gerrit Dashboard: QTBUG-130361
        # Subject Branch Project Status CR V

            xavierbesson Xavier Besson
            qtdel Quentin Deldycke
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes