QWebSocketServer: add sslErrorsOccurred signal with QSslSocket arg

Add a sslErrorsOccurred signal with the underlying QSslSocket as an
argument to allow ignoring ssl errors.

Fixes: QTBUG-130361
Change-Id: I07d082dc98b705c908f7ca9595d60b1b90b9ddf3
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>